[package]
name = "hijri_date"
version = "0.1.6"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
readme = "README.md"
description = "provides functionality for conversion between hijri and gregorian calander"
repository =  "https://github.com/sigmaSd/HijriDate-rs"
license = "MIT"


[dependencies]
chrono = "0.4.5"
lazy_static = "1.0.2"
arabic_reshaper = "0.1.4"
