[package]
name = "hijri_date"
version = "0.3.2"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
readme = "README.md"
description = "provides functionality for conversion between hijri and gregorian calander"
repository =  "https://github.com/sigmaSd/HijriDate-rs"
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4.10"
once_cell = "1.2.0"
