[package]
name = "hijri_date"
version = "0.5.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
readme = "README.md"
description = "provides functionality for conversion between hijri and gregorian calander"
repository =  "https://github.com/sigmaSd/HijriDate-rs"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"

